# OsmToRoadGraph

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  codecov.yml  configuration.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml  pythonapp.yml
examples/cpp/: CMakeLists.txt  main.cpp
examples/cpp/io/: ReadRG.h
examples/pycgr-to-png/: README.MD  pycgr-to-png.py  requirements.txt
examples/shortest-distances-drawing/: README.MD  requirements.txt  shortest-distances-drawing.py
examples/shortest-path-drawing/: README.MD
examples/shortest-path-tree/: README.MD  shortest-path-tree.py
graph/: algorithms.py  compress_graph.py  contract_graph.py  convert_graph.py  graph.py  graph_types.py  graphfactory.py
osm/: osm_types.py  read_osm.py  sanitize_input.py  way_parser_helper.py  xml_handler.py  xml_handler_et.py  xml_handler_lxml.py
output/: write_graph.py
tests/: contract_graph_test.py  convert_graph_test.py  graph_test.py  graphfactory_test.py  integration_test.py  utils_test.py
utils/: geo_tools.py  timer.py
