[project]
name = "OsmToRoadGraph"
version = "0.7.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
networkx = ["networkx"]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F", "SIM", "E", "A", "ARG", "B", "C4", "TC", "RET", "TID", "Q"]
ignore = ["E501"]
fixable = ["ALL"]
